sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_empty_arrivalpos/errors.duarouter
Error: Invalid arrivalpos definition for vehicle '1'
Quitting (on error).
